<resources>
    <string name="app_name">Database Comparison</string>
    <string name="action_settings">Settings</string>
    <string name="results">Results for %1$s:</string>

    <string name="simple">Simple write</string>
    <string name="complex">Complex write</string>
    <string name="simpleread">Simple read</string>
    <string name="complexread">Complex read</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
