<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/simple"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="runSimpleTrial"
            android:text="@string/simple"/>

        <Button
            android:id="@+id/complex"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="runComplexTrial"
            android:text="@string/complex"
            android:layout_marginLeft="9dp"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_weight=".3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginLeft="9dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="9dp">

        <Button
            android:id="@+id/simpleread"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="runSimpleTrialRead"
            android:text="@string/simpleread"/>

        <Button
            android:id="@+id/complexread"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="runComplexTrialRead"
            android:text="@string/complexread"
            android:layout_marginLeft="9dp"/>

        <ProgressBar
            android:id="@+id/progressread"
            android:layout_weight=".3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/resultsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"/>

</LinearLayout>